Closed Bug 328769 Opened 19 years ago Closed 19 years ago

assertion running e4x tests

Categories

(Core :: JavaScript Engine, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: mrbkap, Assigned: mrbkap)

References

Details

(Keywords: assertion, verified1.8.0.2, verified1.8.1, Whiteboard: [patch][rft-dl])

Attachments

(1 file)

bug 328249 added an assertion that we never see lists of length > 1 in CheckCycle, but this isn't the case, thanks to Insert. Instead of trying to handle lists in CheckCycle, we should simply only pass elements to it, and do the looping (and flattening) elsewhere.
Status: NEW → ASSIGNED
Priority: -- → P1
Whiteboard: [patch]
Attached patch FixSplinter Review
This has r=brendan
Assignee: general → mrbkap
Attachment #213361 - Flags: review+
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment on attachment 213361 [details] [diff] [review] Fix Since bug 328249 was checked into the branch, we need this too.
Attachment #213361 - Flags: approval1.8.0.2?
Attachment #213361 - Flags: approval-branch-1.8.1?(brendan)
Comment on attachment 213361 [details] [diff] [review] Fix This is a followup fix to the 1.8.0 branch, safe for 1.8.0.2 if that's still taking fixes. /be
Attachment #213361 - Flags: approval-branch-1.8.1?(brendan) → approval-branch-1.8.1+
Comment on attachment 213361 [details] [diff] [review] Fix approved for 1.8.0 branch, a=dveditz
Attachment #213361 - Flags: approval1.8.0.2? → approval1.8.0.2+
Fix checked into the 1.8 branches.
please provide testcase or test guidance for this fix.
Whiteboard: [patch] → [patch][tcn-dl]
The testcase in js/tests/e4x/Expressions/11.6.1.js covers this.
practically every test failed with this bug. I did not see any crashes in my nightly build testing and am running debug build testing now. I will verify it when I complete.
Whiteboard: [patch][tcn-dl] → [patch][rft-dl]
no longer see the failures which resulted from this bug.
Status: RESOLVED → VERIFIED
Flags: in-testsuite-
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: